--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>✨ Proud of Your Progress</h1>
     
-    <form id="cardForm">
+    <form id="cardForm" onsubmit="generateCertificate(event)">
         <label for="studentName">Student's Name:</label>
         <input type="text" id="studentName" required>
 
@@ -24,9 +24,9 @@
     </form>
 
     <!-- Modal for displaying certificates -->
-    <div id="modal" class="modal">
+    <div id="modal" class="modal" style="display:none;">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="close" onclick="closeModal()">&times;</span>
             <div id="certificateContent">
                 <!-- Certificate content will appear here -->
             </div>
